Fixed layout of products on mobile catalog

--- a/source/sass/_page-main.scss
+++ b/source/sass/_page-main.scss
@@ -3,21 +3,14 @@
 }
 
 .page-main__title {
-  padding-top: 31px;
-  padding-left: $mobile-padding;
-  padding-right: $mobile-padding;
-  padding-bottom: 36px;
+  @include add-side-paddings();
+  padding-top: 27px;
+  padding-bottom: 40px;
   border-top: 1px solid $light-grey;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
-    padding-left: $tablet-padding;
-    padding-right: $tablet-padding;
-    border-top: none;
-  }
 
-  @media (min-width: $desktop-width) {
-    padding-left: $desktop-padding;
-    padding-right: $desktop-padding;
+    border-top: none;
   }
 }
